$Id$

TODO:
- classpath, jamvm
- give W900V a AVM-Webinterface (from 7150)
- bird and netsnmp don't build with more than one job

Latest changes:
- Suppress tar "lone zero block" warning when unpacking certain firmware images
- External IP can now be determined without calling external servers:
    a) CGI template ip.txt for AVM websrv displays external IP in browser
    b) Shell script /bin/get_ip prints external IP to stdout (no line-feed)
- Added libelf library needed by ltrace - BUILD OK, BUT UNTESTED
- Added section "debug helpers" in menuconfig
- Added debug helper package strace (binary only)
- Added debug helper package ltrace (binary only) - COMPILES, BUT CRASHES
- Updated cifsmount package to 0.2: added CGI (web config) for up to three
  mounts; added init.d start/stop scripts; added script 'cifsmount' for more
  convenient command line (un-)mounting.
- Fixed 'tar --exclude .svn' for dnsmasq, cifsmount and deco: option was not
  set for '*-package' targets (tar -c), but for unpack targets (tar -x).
- Remove "depends on DS_REPLACE_KERNEL" for iptables libs 
- Checking for and cleaning up Subversion directories in build/modified
  before packing firmware image
- Updated copyright notices and acknowledgements
- Updated MOTD to reflect DS-Mod_26 series (different ASCII art) 
- Fix menuconfig warning concerning download toolchain
- Remove kernel-toolchain from target-toolchain prerequisites 
- Add gcc-4.1.2 to target toolchain menu after it has been fixed
- FUSE module got lost when removed KERNEL_MODULES_DIR
- Add mirror for download toolchain
- Added, fixed and enhanced a few help texts for menuconfig in Config.in and
  toolchain/Config.in.
- Introducing detailed help texts for menuconfig's shared library section.
  Unfortunately, this blows up libs/Config.in immensely - even more so, because
  sub-menus cannot get their own help texts for technical reasons. So, for menus
  containing several entries there is a lot of redundancy (i.e. repetition). The