@@ -6,6 +6,8 @@ TODO:
 - bird and netsnmp don't build with more than one job
 
 Latest changes:
+- Fix package virtualip-cgi and promote to version 0.4.1. There were bugs in
+  the make script and in the download package itself.
 - Suppress tar "lone zero block" warning when unpacking certain firmware images
 - External IP can now be determined without calling external servers:
     a) CGI template ip.txt for AVM websrv displays external IP in browser
